# enigma

./: .gitignore  CMakeLists.txt  EMOps.cpp  EMOps.h  EnigmaMachine.cpp  EnigmaMachine.h  Operations.cpp  Operations.h  Plugboard.cpp  Plugboard.h  README.md  Reflector.cpp  Reflector.h  Rotor.cpp  Rotor.h  RotorBox.cpp  RotorBox.h  RotorMappingBuilder.cpp  RotorMappingBuilder.h  Testing.cpp  main.cpp  misc_debug.cpp
Analysis/: BlindDecrypt.cpp  BlindDecrypt.h  Decrypt.cpp  Decrypt.h  KnownPlaintextStack.cpp  KnownPlaintextStack.h  Op.h  Ops.cpp  Ops.h  stdo.h
Analysis/CharacterFrequency/: CharacterFrequency.cpp  CharacterFrequency.h
Analysis/DecryptionReturnables/: DecryptInfo.h  PlugboardDecryptInfo.cpp  PlugboardDecryptInfo.h  RingDecryptInfo.cpp  RingDecryptInfo.h  RotorDecryptInfo.cpp  RotorDecryptInfo.h
Analysis/IndexOfCoincidence/: IndexOfCoincidence.cpp  IndexOfCoincidence.h
Analysis/KnownPlaintextSimple/: KnownPlaintextSimple.cpp  KnownPlaintextSimple.h
Enigma/: EMOps.cpp  EnigmaConfig.cpp  EnigmaMachine.cpp  Plugboard.cpp  Reflector.cpp  Rotor.cpp  RotorBox.cpp  RotorMappingBuilder.cpp
Enigma/Headers/: EMOps.h  EnigmaConfig.h  EnigmaMachine.h  Plugboard.h  Reflector.h  Rotor.h  RotorBox.h  RotorMappingBuilder.h  stdeo.h
IndexOfCoincidence/: IndexOfCoincidence.cpp  IndexOfCoincidence.h
textfiles/: plaintext.txt
